@@ -7,22 +7,9 @@
 // 🛃 Imports
 /* -------------------------------------------------------------------------- */
 
-import at.phatbl.shellexec.ShellExec
-import com.jfrog.bintray.gradle.BintrayExtension
-import org.gradle.api.DefaultTask
-import org.gradle.api.tasks.Delete
-import java.util.Date
-import org.gradle.kotlin.dsl.apply
-import org.gradle.kotlin.dsl.creating
-import org.gradle.kotlin.dsl.extra
-import org.gradle.kotlin.dsl.kotlin
+import io.gitlab.arturbosch.detekt.Detekt
+import org.gradle.api.file.DuplicatesStrategy
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
-import org.junit.platform.console.options.Details
-import org.junit.platform.gradle.plugin.EnginesExtension
-import org.junit.platform.gradle.plugin.FiltersExtension
-import org.junit.platform.gradle.plugin.JUnitPlatformExtension
-import java.io.File
-import java.nio.file.Files.delete
 
 /* -------------------------------------------------------------------------- */
 // 🔌 Plugins
@@ -32,26 +19,20 @@ plugins {
     // Gradle built-in
     jacoco
     `java-gradle-plugin`
-    maven // only applied to make bintray happy
     `maven-publish`
 
     // Gradle plugin portal - https://plugins.gradle.org/
-    kotlin("jvm") version "1.3.60"
-    id("at.phatbl.shellexec") version "1.4.1"
-    id("com.gradle.plugin-publish") version "0.10.1"
-    id("com.jfrog.bintray") version "1.8.4"
-    id("io.gitlab.arturbosch.detekt") version "1.2.2"
-
-    // Custom handling in pluginManagement
-    id("org.junit.platform.gradle.plugin") version "1.2.0"
+    kotlin("jvm") version "1.5.31"
+    id("com.gradle.plugin-publish") version "0.10.1" //"1.0.0-rc-2"
+    id("io.gitlab.arturbosch.detekt") version "1.20.0"
 }
 
 /* -------------------------------------------------------------------------- */
 // 📋 Properties
 /* -------------------------------------------------------------------------- */
 
-val artifactName: String by project
-val javaPackage = "$group.$artifactName"
+val artifactId: String by project
+val javaPackage = "$group.$artifactId"
 val pluginClass: String by project
 val projectUrl: String by project
 val tags: String by project
@@ -61,19 +42,9 @@ val license: String by project
 val jvmTarget = JavaVersion.VERSION_1_8
 
 val commonsExecVersion: String by project
+val junitVersion: String by project
 val spekVersion: String by project
 val detektVersion: String by project
-
-// FIXME: Get version from plugins block
-// This is necessary to make the plugin version accessible in other places
-// https://stackoverflow.com/questions/46053522/how-to-get-ext-variables-into-plugins-block-in-build-gradle-kts/47507441#47507441
-//val junitPlatformVersion: String? by extra {
-//    buildscript.configurations["classpath"]
-//            .resolvedConfiguration.firstLevelModuleDependencies
-//            .find { it.moduleName == "junit-platform-gradle-plugin" }?.moduleVersion
-//}
-
-val junitPlatformVersion: String by project
 val jacocoVersion: String by project
 val gradleWrapperVersion: String by project
 
@@ -86,7 +57,7 @@ tasks.wrapper {
 // 👪 Dependencies
 /* -------------------------------------------------------------------------- */
 
-repositories.jcenter()
+repositories.gradlePluginPortal()
 
 dependencies {
     api("org.apache.commons:commons-exec:$commonsExecVersion")
@@ -96,9 +67,11 @@ dependencies {
 
     testImplementation(kotlin("test"))
     testImplementation(kotlin("test-junit"))
-    testImplementation("org.junit.platform:junit-platform-runner:$junitPlatformVersion")
+    testImplementation(platform("org.junit:junit-bom:$junitVersion"))
+    testImplementation("org.junit.platform:junit-platform-runner")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
     testImplementation("org.jetbrains.spek:spek-api:$spekVersion")
-    testImplementation("org.jetbrains.spek:spek-junit-platform-engine:$spekVersion")
+    testRuntimeOnly("org.jetbrains.spek:spek-junit-platform-engine:$spekVersion")
 }
 
 /* -------------------------------------------------------------------------- */
@@ -107,7 +80,7 @@ dependencies {
 
 tasks.withType<KotlinCompile> { kotlinOptions.jvmTarget = "$jvmTarget" }
 
-configure<JavaPluginConvention> {
+java {
     sourceCompatibility = jvmTarget
     targetCompatibility = jvmTarget
 }
@@ -118,30 +91,38 @@ sourceSets["main"].resources {
     include("VERSION.txt")
 }
 
-val updateVersionFile by tasks.creating {
+val updateVersionFile: Task by tasks.creating {
     description = "Updates the VERSION.txt file included with the plugin"
     group = "Build"
     doLast {
-        val resources = "src/main/resources"
+        val resources = layout.projectDirectory.dir("src/main/resources")
         project.file(resources).mkdirs()
-        val versionFile = project.file("$resources/VERSION.txt")
+
+        val versionFile = resources.file("VERSION.txt").asFile
         versionFile.createNewFile()
         versionFile.writeText(version.toString())
     }
 }
 
-tasks.getByName("processResources").dependsOn(updateVersionFile)
-tasks.getByName("assemble").dependsOn(updateVersionFile)
+afterEvaluate {
+    tasks.named("processResources").configure {
+        dependsOn(updateVersionFile)
+        val task = this as AbstractCopyTask
+        // Workaround for error 👇🏻
+        // Execution failed for task ':processResources'.
+        //> Entry VERSION.txt is a duplicate but no duplicate handling strategy has been set. Please refer to https://docs.gradle.org/7.4.2/dsl/org.gradle.api.tasks.Copy.html#org.gradle.api.tasks.Copy:duplicatesStrategy for details.
+        task.duplicatesStrategy = DuplicatesStrategy.INCLUDE
+    }
+}
 
 val sourcesJar by tasks.creating(Jar::class) {
     dependsOn("classes")
-    classifier = "sources"
-    from(sourceSets["main"].allSource)
+    from(sourceSets["main"].allJava)
+    exclude("src/main/resources/VERSION.txt")
 }
 
 val javadocJar by tasks.creating(Jar::class) {
     dependsOn("javadoc")
-    classifier = "javadoc"
     val javadoc = tasks.withType<Javadoc>().first()
     from(javadoc.destinationDir)
 }
@@ -149,12 +130,12 @@ val javadocJar by tasks.creating(Jar::class) {
 artifacts.add("archives", sourcesJar)
 artifacts.add("archives", javadocJar)
 
-configure<BasePluginConvention> {
+base {
     // at.phatbl.shellexec-1.0.0.jar
-    archivesBaseName = artifactName
+    archivesBaseName = artifactId
 }
 
-gradlePlugin.plugins.create(artifactName) {
+gradlePlugin.plugins.create(artifactId) {
     id = javaPackage
     implementationClass = "$javaPackage.$pluginClass"
 }
@@ -165,43 +146,40 @@ pluginBundle {
     description = project.description
 
     (plugins) {
-        artifactName {
+        artifactId {
             id = javaPackage
             displayName = project.name
             tags = labels
             version = project.version.toString()
         }
     }
-    mavenCoordinates.artifactId = artifactName
+    mavenCoordinates.artifactId = artifactId
 }
 
 /* -------------------------------------------------------------------------- */
 // ✅ Test
 /* -------------------------------------------------------------------------- */
 
-junitPlatform {
-    filters {
-        includeClassNamePatterns("^.*Tests?$", ".*Spec", ".*Spek")
-        engines {
-            include("spek")
-        }
-    }
-    details = Details.TREE
+tasks.test {
+    jvmArgs(
+        "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+        "--add-opens", "java.base/java.util=ALL-UNNAMED"
+    )
 }
 
 // https://docs.gradle.org/current/userguide/jacoco_plugin.html#sec:jacoco_getting_started
 jacoco {
     toolVersion = jacocoVersion
-    reportsDir = file("$buildDir/reports/jacoco")
+    reportsDirectory.set(file("$buildDir/reports/jacoco"))
 }
 
 tasks.jacocoTestReport {
     reports {
-        xml.isEnabled = true
-        html.destination = file("$buildDir/reports/jacoco.xml")
-        csv.isEnabled = false
-        html.isEnabled = true
-        html.destination = file("$buildDir/reports/jacocoHtml")
+        html.required.set(true)
+        html.outputLocation.set(layout.buildDirectory.dir("reports/jacocoHtml"))
+        xml.required.set(true)
+        xml.outputLocation.set(layout.buildDirectory.file("reports/jacoco.xml"))
+        csv.required.set(false)
     }
 }
 
@@ -218,16 +196,9 @@ val codeCoverageReport by tasks.creating(JacocoReport::class) {
 detekt {
     toolVersion = detektVersion
     config = files("$projectDir/detekt.yml")
-    idea {
-        path = ".idea"
-        codeStyleScheme = ".idea/code-style.xml"
-        inspectionsProfile = ".idea/inspect.xml"
-        report = "$projectDir/reports"
-        mask = "*.kt,"
-    }
 }
 
-tasks.withType<io.gitlab.arturbosch.detekt.Detekt> {
+tasks.withType<Detekt> {
     // include("**/special/package/**") // only analyze a sub package inside src/main/kotlin
     exclude(".*test.*,.*/resources/.*,.*/tmp/.*")
 }
@@ -238,14 +209,6 @@ val lint by tasks.creating(DefaultTask::class) {
     // Does this task come from java-gradle-plugin?
     dependsOn("validatePlugins")
     dependsOn("detekt")
-}
-
-val danger by tasks.creating(ShellExec::class) {
-    description = "Runs danger rules."
-    group = "Verification"
-    command = """\
-        bundle install --gemfile=Gemfile --verbose
-        ./bin/danger --verbose"""
 }
 
 val codeQuality by tasks.creating(DefaultTask::class) {
@@ -274,7 +237,7 @@ publishing {
     publications {
         register("mavenJava", MavenPublication::class) {
             from(components["java"])
-            artifactId = artifactName
+            artifactId = artifactId
 
             artifact(sourcesJar) { classifier = "sources" }
             artifact(javadocJar) { classifier = "javadoc" }
@@ -282,54 +245,8 @@ publishing {
     }
 }
 
-bintray {
-    user = property("bintray.user") as String
-    key = property("bintray.api.key") as String
-    setPublications("mavenJava")
-    setConfigurations("archives")
-    dryRun = false
-    publish = true
-    pkg.apply {
-        repo = property("bintray.repo") as String
-        name = project.name
-        desc = project.description
-        websiteUrl = projectUrl
-        issueTrackerUrl = "$projectUrl/issues"
-        vcsUrl = "$projectUrl.git"
-        githubRepo = "phatblat/${project.name}"
-        githubReleaseNotesFile = "CHANGELOG.md"
-        setLicenses(property("license") as String)
-        setLabels("gradle", "plugin", "exec", "shell", "bash", "kotlin")
-        publicDownloadNumbers = true
-        version.apply {
-            name = project.version.toString()
-            desc = "ShellExec Gradle Plugin ${project.version}"
-            released = Date().toString()
-            vcsTag = project.version.toString()
-            attributes = mapOf("gradle-plugin" to "${project.group}:$artifactName:${project.version}")
-
-            mavenCentralSync.apply {
-                sync = false //Optional (true by default). Determines whether to sync the version to Maven Central.
-                user = "userToken" //OSS user token
-                password = "password" //OSS user password
-                close = "1" //Optional property. By default the staging repository is closed and artifacts are released to Maven Central. You can optionally turn this behaviour off (by puting 0 as value) and release the version manually.
-            }
-        }
-    }
-}
-
-// Workaround to eliminate warning from bintray plugin, which assumes the "maven" plugin is being used.
-// https://github.com/bintray/gradle-bintray-plugin/blob/master/src/main/groovy/com/jfrog/bintray/gradle/BintrayPlugin.groovy#L85
-val install by tasks
-install.doFirst {
-    val maven = project.convention.plugins["maven"] as MavenPluginConvention
-    maven.mavenPomDir = file("$buildDir/publications/mavenJava")
-    logger.info("Configured maven plugin to use same output dir as maven-publish: ${maven.mavenPomDir}")
-}
-
-val deploy by tasks.creating {
-    description = "Deploys plugin to bintray and the Gradle plugin portal."
+val deploy: Task by tasks.creating {
+    description = "Deploys plugin to the Gradle plugin portal."
     group = "🚇 Tube"
-    dependsOn("bintrayUpload")
     dependsOn("publishPlugins")
 }
